# noxion

./: README.md  noxion.cabal
app/: Main.hs
haskell/src/Models/: AppState.hs  Facade.hs  TaskManager.hs
prolog/src/: auth.pl  db.pl  fachada.pl
src/: Status.hs  Task.hs  User.hs
src/Models/: AppState.hs  Auth.hs  Facade.hs  Filters.hs  Stats.hs  Task.hs  TaskManager.hs  Types.hs  User.hs
